--- a/api/travelmate.yml
+++ b/api/travelmate.yml
@@ -5,7 +5,7 @@ servers:
 info:
     title: TravelMate API
     version: 0.1.0
-    termsOfService: "https://api.onthelink.nl:2100/terms/"
+    termsOfService: "https://tm.onthelink.nl:2100/terms/"
     contact:
         name: API Support
         email: support@onthelink.nl
